# 24101515_OSS_term_project

./: .gitignore  LICENSE  README.md
AI_Project/: CMakeLists.txt  readme.md
AI_Project/cmake/: execute.cmake  library.cmake
AI_Project/source/AI/: FCModel.cpp  FCModel.hpp  FullyConnected.cpp  FullyConnected.hpp  LayerDescriptor.cpp  LayerDescriptor.hpp  Model.cpp  Model.hpp  optimizer.cpp  optimizer.hpp  sam.cpp  sam.hpp
AI_Project/source/AI/mnist/: mnist_common.cpp  mnist_common.hpp  mnist_eval.cpp  mnist_train.cpp
AI_Project/source/compute/: ggml-common.h  ggml-impl.h  v-backend.cpp  v-backend.h  v.cpp  v.h  v_allocator.cpp  v_allocator.h  v_backend.cpp  v_binary.cpp  v_comp.cpp  v_context.cpp  v_ctx.hpp  v_fn.cpp  v_fn.h  v_gated_linear_unit.cpp  v_gated_linear_unit.hpp  v_graph.cpp  v_graph.hpp  v_hash.h  v_log.cpp  v_log.hpp  v_object.hpp  v_op.hpp  v_op_binary.cpp  v_op_binary.hpp  v_op_unary.cpp  v_op_unary.hpp  v_quants.cpp  v_quants.h  v_shape.cpp  v_tensor.cpp  v_tensor.hpp  v_type.cpp  v_type.hpp  v_util.h  v_vision.cpp  v_vision.hpp
AI_Project/source/compute/ggml-cpu/: CMakeLists.txt  binary-ops.cpp  binary-ops.h  common.h  ggml-cpu-impl.h  ggml-cpu.c  ggml-cpu.cpp  ops.cpp  ops.h  quants.h  repack.cpp  traits.cpp  traits.h  unary-ops.cpp  unary-ops.h
AI_Project/source/compute/gguf/: gguf.cc  gguf.h
AI_Project/source/python/: python.cpp  python.hpp
AI_Project/source/test/: cifar-100_train_fc.cpp  cifar-10_train_cnn.cpp  cifar-10_train_fc.cpp  cifar-10_train_fc_.cpp  compute.cpp  max_pool2d_back_test.cpp  mnist_test.cpp  mnist_train.cpp  nan_TEST.cpp  python__test.cpp  vanila_gan_mnist.cpp
rendering_app/: CMakeLists.txt  CMakePresets.txt  main.cpp  readme.md
rendering_app/source/core/: context.cpp  context.hpp  engine.cpp  engine.hpp
rendering_app/source/core/GPU/: CMakeLists.txt  IBuffer.hpp  ICommandBuffer.hpp  IPipeline.hpp  IShader.hpp  flag.hpp  gpu_context.cpp  gpu_context.hpp
rendering_app/source/core/GPU/VK/: vk_command_buffer.cpp  vk_command_buffer.hpp  vk_common.hpp  vk_context.cpp  vk_context.hpp  vk_descriptor_allocator.cpp  vk_descriptor_allocator.hpp  vk_descriptor_layout_builder.cpp  vk_descriptor_layout_builder.hpp  vk_discard_pool.cpp  vk_discard_pool.hpp  vk_frame_attachment.cpp  vk_frame_attachment.hpp  vk_graph_builder.cpp  vk_graph_builder.hpp  vk_host_buffer.cpp  vk_host_buffer.h  vk_memory_allocator.cpp  vk_memory_allocator.hpp  vk_memory_pool.cpp  vk_memory_pool.hpp  vk_mesh.cpp  vk_mesh.hpp  vk_pass.cpp  vk_pass.hpp  vk_pipeline_pool.cpp  vk_pipeline_pool.hpp  vk_resource.cpp  vk_resource.hpp  vk_resource_allocator.cpp  vk_resource_allocator.hpp  vk_sampler_builder.cpp  vk_sampler_builder.hpp  vk_scheduler.cpp  vk_scheduler.hpp  vk_shader_memory.cpp  vk_shader_memory.hpp  vk_shader_pool.cpp  vk_shader_pool.hpp  vk_swapchain.cpp  (+7 more)
rendering_app/source/core/GPU/VK/legacy/: legacy.cpp  legacy.hpp  vk_streaming_buffer.cpp  vk_streaming_buffer.hpp
rendering_app/source/core/GPU/imgui/: imgui.h  imgui_demo.cpp
rendering_app/source/core/GPU/imgui/back/: imgui_impl_vulkan.cpp
rendering_app/source/core/GPU/imnodes/imgui/: imconfig.h  imgui.cpp  imgui_draw.cpp  imstb_rectpack.h  imstb_truetype.h
rendering_app/source/core/GPU/imnodes/imgui/back/: imgui_impl_vulkan.cpp
rendering_app/source/core/GPU/ktx/include/: ktx.h
rendering_app/source/core/GPU/ktx/lib/: uthash.h  vk_funcs.c  writer.c
rendering_app/source/core/GPU/stb_image/: stb_image.h
rendering_app/source/core/Render/: RenderPassPool.cpp  RenderPassPool.hpp  frame_graph.cpp  frame_graph.hpp  frame_graph_viewer.cpp  frame_graph_viewer.hpp  render_pipeline.cpp  render_pipeline.hpp  render_target_film.cpp  render_target_film.hpp  renderer.cpp  renderer.hpp
rendering_app/source/core/UI/: ui.cpp  ui.hpp
rendering_app/source/core/User/: user.hpp
rendering_app/source/core/io/: event_manager.cpp  event_manager.hpp  io.cpp  io.hpp  log_sink.cpp  log_sink.hpp
rendering_app/source/core/resource/: importer.cpp  importer.hpp  resource_manager.cpp  resource_manager.hpp  vertex.hpp
rendering_app/source/core/scene/: animation.cpp  animation.hpp  camera_func.cpp  camera_func.hpp  camera_state.cpp  camera_state.hpp  importer_desc.hpp  light.cpp  light.hpp  material.hpp  mesh.cpp  mesh.hpp  mesh_sub.hpp  model.cpp  model.hpp  scene.hpp
rendering_app/source/core/util/: cast.hpp  enum_op.hpp  transform.h  unique.hpp
rendering_app/source/shader/: cube.vert  def_cube.frag  def_depthRender.frag  def_depthRender.frag.spv  def_geo_write.frag  def_geo_write.frag.spv  def_lightning_write.frag  def_lightning_write.frag.spv  def_shadow_write.vert  depth_write.frag  depth_write.frag.spv  fragment.frag  off_screen_render.frag  off_screen_render.frag.spv  post_blooming_blur.frag  post_blooming_blur.frag.spv  post_blooming_extract.frag  post_blooming_extract.frag.spv  post_gamma.frag  post_gamma.frag.spv  post_tone_mapping.frag  post_tone_mapping.frag.spv  quad.vert  quad.vert.spv  vertex.vert  vertex.vert.spv
sculping_app/: CMakeLists.txt  main.cpp  readme.md
sculping_app/source/core/: app.cpp  app.hpp  engine_init.cpp  event_manager.cpp  event_manager.hpp  event_manager_mode.hpp  log_sink.cpp  renderer.cpp  renderer.hpp  renderer_draw.cpp  resource_pool.cpp  resource_pool.hpp  resource_pool_init.cpp  ui_renderer.hpp  ui_renderer_draw.cpp  vk_context_load.cpp
sculping_app/source/model/: camera.cpp  camera.hpp  light.hpp  mesh.cpp  mesh.hpp  model.hpp  vertex.hpp
sculping_app/source/resource/: buffer_builder.cpp  buffer_builder.hpp  command_pool_manager.cpp  command_pool_manager.hpp  descriptor_layout_builder.hpp  frame_pool.hpp  memory_allocator.cpp  memory_pool.cpp  memory_pool.hpp  pipeline_pool.cpp  pipeline_pool.hpp  pipeline_program.hpp  push_constant.hpp  query.hpp  shader_pool.cpp  shader_pool.hpp  streaming_buffer.cpp  streaming_buffer.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp
sculping_app/source/shader/: fragment.frag  sculptor_background.frag  sculptor_background.frag.spv  sculptor_background.vert  sculptor_background.vert.spv  vertex.vert
(+63 files in other folders)
